--- a/Public/style.css
+++ b/Public/style.css
@@ -1,6 +1,6 @@
 body{
-background: rgb(2,0,36);
-background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(121,9,26,1) 44%, rgba(255,0,121,1) 100%);
+	background: rgb(2,0,36);
+	background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(121,9,26,1) 44%, rgba(255,0,121,1) 100%);
 	font-family: sans-serif;
 	color: white;
 }
@@ -10,9 +10,11 @@ html{
 }
 .content-flex{
 	display: flex;
-	width: 700px;
-	margin:30px auto;
+	flex-wrap: wrap;
+	margin:30px 10%;
+	justify-content: center;
 	align-items: center;
+
 }
 
 h1{
@@ -40,8 +42,8 @@ button{
 }
 
 .greencards{
-	background-color: #4b0;
-		color: #fff;
+	background-color: #04f4;
+	color: #fff;
 
 }
 
@@ -52,8 +54,7 @@ button:hover{
 .section2{
 
 	background-color: rgba(255, 255, 255,0.2);
-	width: 250px;
-	height: 400px;
+	min-width: 250px;
 	border-top-right-radius: 10px;
 	border-bottom-right-radius: 10px;
 	padding: 25px 10px;
@@ -62,7 +63,7 @@ button:hover{
 
 .estadistica{
 	border: 1px solid #fff;
-	height: 105px;
+	min-height: 105px;
 	border-radius: 10px;
 	padding: 8px 20px;
 	box-sizing: border-box; /*investigar*/
@@ -78,4 +79,40 @@ a{
 	text-decoration: none;
 	color: #fff;
 	font-weight: bold;
+}
+
+.img-dec{
+	width: 80%;
+}
+
+@media screen and (max-width: 320px){
+	body{
+		margin-top:80px;
+	}
+
+	button{
+		height: 50px;
+		width: 50px;
+	}
+
+	.section1{
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		border-bottom-left-radius:0px ;
+		border-bottom-right-radius:0px ;
+
+	}
+
+	.section2{
+		padding: 0px 30px;
+		border-bottom-left-radius:10px ;
+		border-top-right-radius: 0px;
+	}
+	.estadistica{
+		font-size: 10px;
+		min-height: 10px;
+	}
+
+
 }
