--- a/Public/style.css
+++ b/Public/style.css
@@ -85,6 +85,7 @@ a{
 	width: 80%;
 }
 
+
 @media screen and (max-width: 480px){
 	body{
 		margin-top:30px;
@@ -114,7 +115,9 @@ a{
 		min-height: 10px;
 	}
 
-
+	.img-dec{
+		width: 80%;
+	}
 }
 @media screen and (max-width: 320px){
 	body{
